--- a/resources/assets/styles/layout/_aside.scss
+++ b/resources/assets/styles/layout/_aside.scss
@@ -13,7 +13,7 @@
     width: 70%;
   }
   @include mq('tablet-wide') {
-    width: 80%;
+    width: 85%;
   }
   @include mq('tablet') {
     @include size();
