--- a/resources/assets/styles/layout/_section.scss
+++ b/resources/assets/styles/layout/_section.scss
@@ -1,22 +1,3 @@
-section {
-  @include size();
-
-  @include mq('tablet') {
-    padding: 20px 20px 0 20px;
-  }
-
-  padding: 20px 30px 0 30px;
-  overflow-y: auto;
-
-  &::-webkit-scrollbar {
-    width: 15px;
-    background-color: $light-grey;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: $🧀;
-  }
-}
 
 .ghost {
   display: none;
@@ -68,7 +49,7 @@ section {
     width: 80%;
   }
   @include mq('tablet-wide') {
-    width: 85%;
+    width: 90%;
   }
   @include mq('tablet') {
     @include size();
@@ -77,6 +58,26 @@ section {
   }
 
   background-color: $white;
+}
+
+section {
+  @include size();
+
+  @include mq('tablet') {
+    padding: 20px 20px 0 20px;
+  }
+
+  padding: 20px 30px 0 30px;
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 15px;
+    background-color: $light-grey;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: $🧀;
+  }
 }
 
 .about {
